Frontend/crowd-funding-frontend/src/Components/styles/paginate.module.css
.nav {
  padding: 5px;
  margin: 5px;
  overflow: scroll;
}

.ul {
  background-color: white;
  /* padding: 0 48%; */
  margin: auto;
  width: 99%;
  padding: 0 45%;
  overflow: scroll;
}

.active {
  background-color: rgba(21, 215, 180, 1) !important;
  border-color: turquoise !important;
}

.inactive {
  border-color: turquoise !important;
}

@media only screen and (max-width: 400px) {
  .ul {
    width: 99%;
    padding: 0 30%;
  }
}

@media only screen and (min-width: 400px) and (max-width: 700px) {
  .ul {
    padding: 0 40%;
  }
}

